:Added requirements.txt and readme.md

--- a/.env.example
+++ b/.env.example
@@ -4,7 +4,6 @@ GROQ_API_KEY=
 # LinkedIn API Keys
 LINKEDIN_CLIENT_ID=
 LINKEDIN_CLIENT_SECRET=
-LINKEDIN_REDIRECT_URI=
+LINKEDIN_REDIRECT_URI=http://localhost:8000/callback
 LINKEDIN_ACCESS_TOKEN=
 LINKEDIN_USER_ID=
-LINKEDIN_AUTHOR_URN=
